--- a/GameData/HabTech2/Parts/Freedom/HT2_NITS_MountingPlate.cfg
+++ b/GameData/HabTech2/Parts/Freedom/HT2_NITS_MountingPlate.cfg
@@ -10,7 +10,7 @@ PART
 	cost = 1500
 	category = Structural
 	subcategory = 0
-	title = ST-ITS-1990 "Freedom" Truss Mounted Plate
+	title = ST-ITS-1990 "Plate" Truss Mounted Platform
 	manufacturer = HabTech Consortium
 	description = External Truss designed for orbital assembly for space station purposes
 	attachRules = 1,1,1,1,1
