--- a/GameData/HabTech2/Parts/Freedom/HT2_NITS_TriTruss.cfg
+++ b/GameData/HabTech2/Parts/Freedom/HT2_NITS_TriTruss.cfg
@@ -10,7 +10,7 @@ PART
 	cost = 1500
 	category = Structural
 	subcategory = 0
-	title = ST-ITS-1989 "Freedom" External Truss System
+	title = ST-ITS-1989 "Tri Force" External Truss System
 	manufacturer = HabTech Consortium
 	description = External Truss designed for orbital assembly for space station purposes
 	attachRules = 1,1,1,1,1
@@ -68,7 +68,7 @@ PART
 	NODE
 	{
 		name = SideNode4
-		transform = FrontNode
+		transform = FrontNode-001
 		size = 1
 	}
 
@@ -158,22 +158,25 @@ PART
         {
             name = Triangle
             title = Triangle Truss
-            transform = SideBars-002
-            transform = TopBars1-002
-            transform = TopBars1-001
-            transform = Cylinder-017-001
-            transform = Cylinder-017-002
-            transform = Cylinder-005
-            transform = TopOrbs-002
-            transform = TopOrbs-001
-            transform = HorizBar2-003
-            transform = Cylinder-006
-            transform = Cylinder-009-001
-            transform = Cylinder-007
-			transform = Cylinder-008
-			transform = Cylinder-001
-			transform = HorizBar2-002
-			transform = Cylinder-004
+            transform = MiddleBar
+			transform = TriangleTrussMountPoint
+			transform = TriangleTrussMountPointAlt
+			transform = TriTrusBase
+			addedMass = .005
+			addedCost = 200
+			node = SideNode1
+			node = SideNode2
+			node = SideNode3
+			node = SideNode4
+			node = BottomNode
+        }
+        SUBTYPE
+        {
+            name = Triangle No Base
+            title = Triangle Truss Stacked
+            transform = MiddleBar
+			transform = TriangleTrussMountPoint
+			transform = TriangleTrussMountPointAlt
 			addedMass = .005
 			addedCost = 200
 			node = SideNode1
