--- a/GameData/HabTech2/Parts/Freedom/HT2_NITS_Truss.cfg
+++ b/GameData/HabTech2/Parts/Freedom/HT2_NITS_Truss.cfg
@@ -10,11 +10,11 @@ PART
 	cost = 1500
 	category = Structural
 	subcategory = 0
-	title = ST-ITS-1985 "Freedom" External Truss System
+	title = ST-ITS-1985 "Baseline" External Truss System
 	manufacturer = HabTech Consortium
 	description = External Truss designed for orbital assembly for space station purposes
 	attachRules = 1,1,1,1,1
-	mass = .5
+	mass = .3
 	dragModelType = default
 	maximum_drag = 0.2
 	minimum_drag = 0.3
@@ -34,6 +34,13 @@ PART
 	{
 		model = HabTech2/Parts/Freedom/HT2_NITS_Truss
 		rotation = -90, 0, 0	// X Y Z
+	}
+	
+	NODE
+	{
+		name = InternalNode
+		transform = TrussBottomInternal
+		size = 1
 	}
 
 // nodes
@@ -56,25 +63,65 @@ PART
 	NODE
 	{
 		name = SideNode1
-		transform = TrussSideNode1
+		transform = RightNode
 		size = 1
 	}
 	NODE
 	{
 		name = SideNode2
-		transform = TrussSideNode2
+		transform = Backnode
 		size = 1
 	}
 	NODE
 	{
 		name = SideNode3
-		transform = TrussSideNode3
+		transform = LeftNode
 		size = 1
 	}
 	NODE
 	{
 		name = SideNode4
-		transform = TrussSideNode4
+		transform = FrontNode
+		size = 1
+	}
+	
+// internal nodes
+
+	NODE
+	{
+		name = IntSideNode1
+		transform = TrussLeftInternal
+		size = 1
+	}
+	NODE
+	{
+		name = IntSideNode2
+		transform = TrussBackInternal
+		size = 1
+	}
+	NODE
+	{
+		name = IntSideNode3
+		transform = TrussRightInternal
+		size = 1
+	}
+	NODE
+	{
+		name = IntSideNode4
+		transform = TrussForwardInternal
+		size = 1
+	}
+
+	NODE
+	{
+		name = IntTop
+		transform = TrussTopInternal
+		size = 1
+	}
+	NODE
+	{
+		name = Intbottom
+		transform = TrussBottomInternal
 		size = 1
 	}
 	
@@ -83,13 +130,19 @@ PART
 	NODE
 	{
 		name = RailNode1
-		transform = TrussRailNode1
+		transform = TrussRailNodeFront
 		size = 1
 	}
 	NODE
 	{
 		name = RailNode2
-		transform = TrussRailNode2
+		transform = TrussRailNodeLeft
+		size = 1
+	}
+	NODE
+	{
+		name = RailNode3
+		transform = TrussRailNodeRight
 		size = 1
 	}
 	
@@ -174,8 +227,6 @@ PART
 			transform = ThirdRail
 			addedMass = .045
 			addedCost = 200
-			node = RailNode1
-			node = RailNode2
         }
         SUBTYPE
         {
@@ -184,8 +235,6 @@ PART
 			transform = TrussRails
 			addedMass = .045
 			addedCost = 200
-			node = RailNode1
-			node = RailNode2
         }
         SUBTYPE
         {
@@ -194,15 +243,11 @@ PART
 			transform = ThirdRail
 			addedMass = .045
 			addedCost = 200
-			node = SideNode1
-			node = SideNode2
         }
         SUBTYPE
         {
             name = No Rail
             title = No Rail
-			node = SideNode1
-			node = SideNode2
         }		
 	}
     MODULE
