--- a/GameData/HabTech2/Parts/Freedom/HT2_NITS_Truss4.cfg
+++ b/GameData/HabTech2/Parts/Freedom/HT2_NITS_Truss4.cfg
@@ -10,11 +10,11 @@ PART
 	cost = 1500
 	category = Structural
 	subcategory = 0
-	title = ST-ITS-1987 "Freedom" External Truss System Upgraded 4
+	title = ST-ITS-1987 "Keel" External Truss System Upgraded 4
 	manufacturer = HabTech Consortium
 	description = External Truss designed for orbital assembly for space station purposes
 	attachRules = 1,1,1,1,1
-	mass = .5
+	mass = 1.2
 	dragModelType = default
 	maximum_drag = 0.2
 	minimum_drag = 0.3
@@ -33,195 +33,329 @@ PART
 	MODEL
 	{
 		model = HabTech2/Parts/Freedom/HT2_NITS_Truss4
-		rotation = -90, 0, 0	// X Y Z
 	}
 
-// nodes
-
-	NODE
-	{
-		name = TopNode
-		transform = TrussTopNode-001-001
-		size = 1
-	}
-	NODE
-	{
-		name = BottomNode
-		transform = TrussBottomNode-001-001
-		size = 1
-	}
-	
-// side nodes
-	
-	NODE
-	{
-		name = SideNode1
-		transform = TrussSideNode1-001-001
-		size = 1
-	}
-	NODE
-	{
-		name = SideNode2
-		transform = TrussSideNode1-001-001-001
-		size = 1
-	}
-	NODE
-	{
-		name = SideNode3
-		transform = TrussSideNode1-001-002-001
-		size = 1
-	}
-	NODE
-	{
-		name = SideNode4
-		transform = TrussSideNode1-001-003-001
-		size = 1
-	}
-	NODE
-	{
-		name = SideNode5
-		transform = TrussSideNode2-001-001
-		size = 1
-	}
-	NODE
-	{
-		name = SideNode6
-		transform = TrussSideNode2-001-001-001
-		size = 1
-	}
-	NODE
-	{
-		name = SideNode7
-		transform = TrussSideNode2-001-002-001
-		size = 1
-	}
-	NODE
-	{
-		name = SideNode8
-		transform = TrussSideNode2-001-003-001
-		size = 1
-	}
-	NODE
-	{
-		name = SideNode9
-		transform = TrussSideNode3-001-001
-		size = 1
-	}
-	NODE
-	{
-		name = SideNode10
-		transform = TrussSideNode3-001-001-001
-		size = 1
-	}
-	NODE
-	{
-		name = SideNode11
-		transform = TrussSideNode3-001-002-001
-		size = 1
-	}
-	NODE
-	{
-		name = SideNode12
-		transform = TrussSideNode3-001-003-001
-		size = 1
-	}
-	NODE
-	{
-		name = SideNode13
-		transform = TrussSideNode4-001-001
-		size = 1
-	}
-	NODE
-	{
-		name = SideNode14
-		transform = TrussSideNode4-001-001-001
-		size = 1
-	}
-	NODE
-	{
-		name = SideNode15
-		transform = TrussSideNode4-001-002-001
-		size = 1
-	}
-	NODE
-	{
-		name = SideNode16
-		transform = TrussSideNode4-001-003-001
-		size = 1
-	}
-	
-// rail nodes
+// Top Node
 
 	NODE
 	{
-		name = RailNode1
-		transform = TrussRailNode1-001-001
+		name = RightNode
+		transform = RightNodeStacked
 		size = 1
 	}
 	NODE
 	{
-		name = RailNode2
-		transform = TrussRailNode1-001-001-001
+		name = LeftNode
+		transform = LeftNodeStacked
 		size = 1
 	}
 	NODE
 	{
-		name = RailNode3
-		transform = TrussRailNode1-001-002-001
+		name = FrontNode
+		transform = FrontNodeStacked
 		size = 1
 	}
 	NODE
 	{
-		name = RailNode4
-		transform = TrussRailNode1-001-003-001
+		name = BackNode
+		transform = BackNodeStacked
 		size = 1
 	}
 	NODE
 	{
-		name = RailNode5
-		transform = TrussRailNode2-001-001
+		name = RightNode1
+		transform = RightNodeStacked1
 		size = 1
 	}
 	NODE
 	{
-		name = RailNode6
-		transform = TrussRailNode2-001-001-001
+		name = LeftNode1
+		transform = LeftNodeStacked1
 		size = 1
 	}
 	NODE
 	{
-		name = RailNode7
-		transform = TrussRailNode2-001-002-001
+		name = FrontNode1
+		transform = FrontNodeStacked1
 		size = 1
 	}
 	NODE
 	{
-		name = RailNode8
-		transform = TrussRailNode2-001-003-001
+		name = BackNode1
+		transform = BackNodeStacked1
+		size = 1
+	}
+	
+	NODE
+	{
+		name = RightNode2
+		transform = RightNodeStacked-01
 		size = 1
 	}
 	NODE
 	{
-		name = RailNode9
-		transform = TrussRailNode3-001-001
+		name = LeftNode2
+		transform = LeftNodeStacked-01
 		size = 1
 	}
 	NODE
 	{
-		name = RailNode10
-		transform = TrussRailNode3-001-001-001
+		name = FrontNode2
+		transform = FrontNodeStacked-01
 		size = 1
 	}
 	NODE
 	{
-		name = RailNode11
-		transform = TrussRailNode3-001-002-001
+		name = BackNode2
+		transform = BackNodeStacked-01
 		size = 1
 	}
 	NODE
 	{
-		name = RailNode12
-		transform = TrussRailNode3-001-003-001
+		name = RightNode3
+		transform = RightNodeStacked1-01
+		size = 1
+	}
+	NODE
+	{
+		name = LeftNode3
+		transform = LeftNodeStacked1-01
+		size = 1
+	}
+	NODE
+	{
+		name = FrontNode3
+		transform = FrontNodeStacked1-01
+		size = 1
+	}
+	NODE
+	{
+		name = BackNode3
+		transform = BackNodeStacked1-01
+		size = 1
+	}
+
+// Rail nodes
+
+	NODE
+	{
+		name = RailRight
+		transform = TrussRailNodeRightStacked
+		size = 1
+	}
+	NODE
+	{
+		name = RailLeft
+		transform = TrussRailNodeLeftStacked
+		size = 1
+	}
+	NODE
+	{
+		name = RailFront
+		transform = TrussRailNodeFrontStacked
+		size = 1
+	}
+	NODE
+	{
+		name = RailRight1
+		transform = TrussRailNodeRightStacked1
+		size = 1
+	}
+	NODE
+	{
+		name = RailLeft1
+		transform = TrussRailNodeLeftStacked1
+		size = 1
+	}
+	NODE
+	{
+		name = RailFront1
+		transform = TrussRailNodeFrontStacked1
+		size = 1
+	}
+	
+	NODE
+	{
+		name = RailRight2
+		transform = TrussRailNodeRightStacked-01
+		size = 1
+	}
+	NODE
+	{
+		name = RailLeft2
+		transform = TrussRailNodeLeftStacked-01
+		size = 1
+	}
+	NODE
+	{
+		name = RailFront2
+		transform = TrussRailNodeFrontStacked-01
+		size = 1
+	}
+	NODE
+	{
+		name = RailRight3
+		transform = TrussRailNodeRightStacked1-01
+		size = 1
+	}
+	NODE
+	{
+		name = RailLeft3
+		transform = TrussRailNodeLeftStacked1-01
+		size = 1
+	}
+	NODE
+	{
+		name = RailFront3
+		transform = TrussRailNodeFrontStacked1-01
+		size = 1
+	}
+
+// internal nodes
+
+	NODE
+	{
+		name = BottomInnerNode
+		transform = TrussBottomInternalStacked
+		size = 1
+	}
+	NODE
+	{
+		name = LeftInnerNode
+		transform = TrussLeftInternalStacked
+		size = 1
+	}
+	NODE
+	{
+		name = RightInnerNode
+		transform = TrussRightInternalStacked
+		size = 1
+	}
+	NODE
+	{
+		name = ForwardInnerNode
+		transform = TrussForwardInternalStacked
+		size = 1
+	}
+	NODE
+	{
+		name = BackInnerNode
+		transform = TrussBackInternalStacked
+		size = 1
+	}
+	NODE
+	{
+		name = TopInnerNode
+		transform = TrussTopInternalStacked
+		size = 1
+	}
+	NODE
+	{
+		name = BottomInnerNode1
+		transform = TrussBottomInternalStacked1
+		size = 1
+	}
+	NODE
+	{
+		name = LeftInnerNode1
+		transform = TrussLeftInternalStacked1
+		size = 1
+	}
+	NODE
+	{
+		name = RightInnerNode1
+		transform = TrussRightInternalStacked1
+		size = 1
+	}
+	NODE
+	{
+		name = ForwardInnerNode1
+		transform = TrussForwardInternalStacked1
+		size = 1
+	}
+	NODE
+	{
+		name = BackInnerNode1
+		transform = TrussBackInternalStacked1
+		size = 1
+	}
+	NODE
+	{
+		name = TopInnerNode1
+		transform = TrussTopInternalStacked1
+		size = 1
+	}
+	
+	NODE
+	{
+		name = BottomInnerNode1
+		transform = TrussBottomInternalStacked-01
+		size = 1
+	}
+	NODE
+	{
+		name = LeftInnerNode1
+		transform = TrussLeftInternalStacked-01
+		size = 1
+	}
+	NODE
+	{
+		name = RightInnerNode1
+		transform = TrussRightInternalStacked-01
+		size = 1
+	}
+	NODE
+	{
+		name = ForwardInnerNode1
+		transform = TrussForwardInternalStacked-01
+		size = 1
+	}
+	NODE
+	{
+		name = BackInnerNode1
+		transform = TrussBackInternalStacked-01
+		size = 1
+	}
+	NODE
+	{
+		name = TopInnerNode1
+		transform = TrussTopInternalStacked-01
+		size = 1
+	}
+	NODE
+	{
+		name = BottomInnerNode11
+		transform = TrussBottomInternalStacked1-01
+		size = 1
+	}
+	NODE
+	{
+		name = LeftInnerNode11
+		transform = TrussLeftInternalStacked1-01
+		size = 1
+	}
+	NODE
+	{
+		name = RightInnerNode11
+		transform = TrussRightInternalStacked1-01
+		size = 1
+	}
+	NODE
+	{
+		name = ForwardInnerNode11
+		transform = TrussForwardInternalStacked1-01
+		size = 1
+	}
+	NODE
+	{
+		name = BackInnerNode11
+		transform = TrussBackInternalStacked1-01
+		size = 1
+	}
+	NODE
+	{
+		name = TopInnerNode11
+		transform = TrussTopInternalStacked1-01
 		size = 1
 	}
 
@@ -233,8 +367,200 @@ PART
 		packedVolume = 100
 	}
 
-// partswitch
+    MODULE
+    {
+        name = ModuleB9PartSwitch
+        moduleID = RaceWayAttached
+        switcherDescription = RaceWay 1
+        switcherDescriptionPlural = RaceWays
+		switchInFlight = true
+        SUBTYPE
+        {
+            name = Full Raceway
+            title = Full
+			transform = ExtendedBaseMainRaceWayTop
+			transform = ExtendedBaseMainRaceWay
+			transform = ExtendedBaseMainRaceWayBottom
+			transform = ExtendedBaseMainRaceWay-01
+			transform = ExtendedBaseMainRaceWayTop-01
+			addedMass = .007
+			addedCost = 100
+        }
 
+        SUBTYPE
+        {
+            name = No
+            title = No
+        }
+		
+        SUBTYPE
+        {
+            name = No Ends
+            title = Main
+			transform = ExtendedBaseMainRaceWay
+			transform = ExtendedBaseMainRaceWay-01
+			addedMass = .007
+			addedCost = 100
+        }
+
+        SUBTYPE
+        {
+            name = Only Top
+            title = Top
+			transform = ExtendedBaseMainRaceWayTop-01
+			addedMass = .007
+			addedCost = 100
+        }
+
+        SUBTYPE
+        {
+            name = Only Bottom
+            title = Bottom
+			transform = ExtendedBaseMainRaceWayBottom
+			addedMass = .007
+			addedCost = 100
+        }
+
+        SUBTYPE
+        {
+            name = Only Ends
+            title = Ends
+			transform = ExtendedBaseMainRaceWayTop-01
+			transform = ExtendedBaseMainRaceWayBottom
+			addedMass = .007
+			addedCost = 100
+        }		
+	}
+	
+    MODULE
+    {
+        name = ModuleB9PartSwitch
+        moduleID = SideRails
+        switcherDescription = Dual Side Rails
+        switcherDescriptionPlural = Side Rails
+		switchInFlight = true
+        SUBTYPE
+        {
+            name = Full Side Rails
+            title = Side Full
+			transform = ExtendedBaseMainRailBottomClips
+			transform = ExtendedBaseMainRail
+			transform = ExtendedBaseMainRailTopClips
+			transform = ExtendedBaseMainRail-01
+			transform = ExtendedBaseMainRailTopClips-01
+			addedMass = .007
+			addedCost = 100
+        }
+
+        SUBTYPE
+        {
+            name = No Side Rails
+            title = Side No
+        }
+		
+        SUBTYPE
+        {
+            name = No End Clips
+            title = Side Main
+			transform = ExtendedBaseMainRail
+			transform = ExtendedBaseMainRail-01
+			addedMass = .007
+			addedCost = 100
+        }
+
+        SUBTYPE
+        {
+            name = Only Top Side Clips
+            title = Side Top
+			transform = ExtendedBaseMainRailTopClips-01
+			addedMass = .007
+			addedCost = 100
+        }
+
+        SUBTYPE
+        {
+            name = Only Bottom Side Clips
+            title = Side Bottom
+			transform = ExtendedBaseMainRailBottomClips
+			addedMass = .007
+			addedCost = 100
+        }
+
+        SUBTYPE
+        {
+            name = Only Side Clip Ends
+            title = Side Ends
+			transform = ExtendedBaseMainRailTopClips-01
+			transform = ExtendedBaseMainRailBottomClips
+			addedMass = .007
+			addedCost = 100
+        }		
+	}
+
+    MODULE
+    {
+        name = ModuleB9PartSwitch
+        moduleID = MainRails
+        switcherDescription = Front Rails
+        switcherDescriptionPlural = Main Rails
+		switchInFlight = true
+        SUBTYPE
+        {
+            name = Full Side Rails
+            title = Side Full
+			transform = ExtendedBaseThirdRailTopClips
+			transform = ExtendedBaseThirdRail-01
+			transform = ExtendedBaseThirdRailBottomClips
+			transform = ExtendedBaseThirdRailTopClips-01
+			transform = ExtendedBaseThirdRail-02
+			addedMass = .007
+			addedCost = 100
+        }
+
+        SUBTYPE
+        {
+            name = No Side Rails
+            title = Side No
+        }
+		
+        SUBTYPE
+        {
+            name = No Ends
+            title = Only Main Rail
+			transform = ExtendedBaseThirdRail-01
+			transform = ExtendedBaseThirdRail-02
+			addedMass = .007
+			addedCost = 100
+        }
+
+        SUBTYPE
+        {
+            name = Only Top Side Clips
+            title = Side Top
+			transform = ExtendedBaseThirdRailTopClips-01
+			addedMass = .007
+			addedCost = 100
+        }
+
+        SUBTYPE
+        {
+            name = Only Bottom Side Clips
+            title = Side Bottom
+			transform = ExtendedBaseThirdRailBottomClips
+			addedMass = .007
+			addedCost = 100
+        }
+
+        SUBTYPE
+        {
+            name = Only Side Clip Ends
+            title = Side Ends
+			transform = ExtendedBaseThirdRailTopClips-01
+			transform = ExtendedBaseThirdRailBottomClips
+			addedMass = .007
+			addedCost = 100
+        }		
+	}
     MODULE
     {
         name = ModuleB9PartSwitch
@@ -246,7 +572,7 @@ PART
         {
             name = Top
             title = Top
-			transform = TrussTop-004-001
+			transform = ExtendedBaseTopBars-01
 			addedMass = .045
 			addedCost = 200
         }
@@ -259,8 +585,8 @@ PART
         {
             name = EndCap
             title = EndCap
-			transform = TrussTop-004-001
-			transform = BarEndCapTop-001-001
+			transform = ExtendedBaseTopBars-01
+			transform = Cylinder-09-01-02-04
         }		
 	}
     MODULE
@@ -274,7 +600,7 @@ PART
         {
             name = Bottom
             title = bottom
-			transform = TrussBottom-001-001
+			transform = ExtendedBaseBottomBars
 			addedMass = .045
 			addedCost = 200
         }
@@ -287,113 +613,9 @@ PART
         {
             name = EndCap
             title = EndCap
-			transform = TrussBottom-001-001
-			transform = BarEndCapBottom-001-001
+			transform = ExtendedBaseBottomBars
+			transform = Cylinder-09-01-02-01
         }		
 	}
-    MODULE
-    {
-        name = ModuleB9PartSwitch
-        moduleID = Rail Positioning
-        switcherDescription = Rail numbers
-        switcherDescriptionPlural = Rail
-		switchInFlight = true
-        SUBTYPE
-        {
-            name = 3 Rails
-            title = 3 Rails
-			transform = TrussRails-001-001
-			transform = TrussRails-002-001
-			transform = TrussRails-003-001
-			transform = TrussRails-004-001
-			transform = ThirdRail-001-001
-			transform = ThirdRail-002-001
-			transform = ThirdRail-003-001
-			transform = ThirdRail-004-001
-			transform = TopRailClips-001-001
-			transform = TopRailClips-002-001
-			transform = TopRailClips-003-001
-			transform = TopRailClips-004-001
-			addedMass = .045
-			addedCost = 200
-			node = RailNode1
-			node = RailNode2
-			node = RailNode3
-			node = RailNode4
-			node = RailNode5
-			node = RailNode6
-			node = RailNode7
-			node = RailNode8
-			node = RailNode9
-			node = RailNode10
-			node = RailNode11
-			node = RailNode12
-        }
-        SUBTYPE
-        {
-            name = No Rail
-            title = No Rail
-			node = SideNode1
-			node = SideNode2
-			node = SideNode3
-			node = SideNode4
-			node = SideNode9
-			node = SideNode10
-			node = SideNode11
-			node = SideNode12
-			node = SideNode13
-			node = SideNode14
-			node = SideNode15
-			node = SideNode16
-        }		
-	}
-    MODULE
-    {
-        name = ModuleB9PartSwitch
-        moduleID = RaceWay One
-        switcherDescription = RaceWay 1
-        switcherDescriptionPlural = RaceWays
-		switchInFlight = true
-        SUBTYPE
-        {
-            name = Yes
-            title = Yes
-			transform = MainRaceWay-001-001
-			transform = MainRaceWay-002-001
-			transform = MainRaceWay-003-001
-			transform = MainRaceWay-004-001
-			transform = ElectricalConnectorTop-001-001
-			transform = ElectricalConnectorTop-002-001
-			transform = ElectricalConnectorTop-003-001
-			addedMass = .007
-			addedCost = 100
-        }
-        SUBTYPE
-        {
-            name = No
-            title = No
-        }		
-	}
-    MODULE
-    {
-        name = ModuleB9PartSwitch
-        moduleID = RaceWay One
-        switcherDescription = RaceWay Connectors
-        switcherDescriptionPlural = RaceWays
-		switchInFlight = true
-        SUBTYPE
-        {
-            name = Yes
-            title = Yes
-			transform = ElectricalConnectorTop-004-001
-			transform = ElectricalConnectorBottom-001-001
-			addedMass = .007
-			addedCost = 100
-        }
-        SUBTYPE
-        {
-            name = No
-            title = No
-        }		
-	}
+
 }
