--- a/GameData/HabTech2/Parts/Freedom/HT2_NITS_Truss2.cfg
+++ b/GameData/HabTech2/Parts/Freedom/HT2_NITS_Truss2.cfg
@@ -14,7 +14,7 @@ PART
 	manufacturer = HabTech Consortium
 	description = External Truss designed for orbital assembly for space station purposes
 	attachRules = 1,1,1,1,1
-	mass = .5
+	mass = .6
 	dragModelType = default
 	maximum_drag = 0.2
 	minimum_drag = 0.3
@@ -33,115 +33,182 @@ PART
 	MODEL
 	{
 		model = HabTech2/Parts/Freedom/HT2_NITS_Truss2
-		rotation = -90, 0, 0	// X Y Z
 	}
+// Top Node
 
-// nodes
-
-	NODE
-	{
-		name = TopNode
-		transform = TrussTopNode-001-002
-		size = 1
-	}
 	NODE
 	{
 		name = BottomNode
-		transform = TrussBottomNode-001-002
-		size = 1
-	}
-	
-// side nodes
-	
-	NODE
-	{
-		name = SideNode1
-		transform = TrussSideNode1-001-001-002
-		size = 1
-	}
-	NODE
-	{
-		name = SideNode2
-		transform = TrussSideNode1-001-002
-		size = 1
-	}
-	NODE
-	{
-		name = SideNode3
-		transform = TrussSideNode2-001-001-002
-		size = 1
-	}
-	NODE
-	{
-		name = SideNode4
-		transform = TrussSideNode2-001-002
-		size = 1
-	}
-	NODE
-	{
-		name = SideNode5
-		transform = TrussSideNode3-001-001-002
-		size = 1
-	}
-	NODE
-	{
-		name = SideNode6
-		transform = TrussSideNode3-001-002
-		size = 1
-	}
-	NODE
-	{
-		name = SideNode7
-		transform = TrussSideNode4-001-001-002
-		size = 1
-	}
-	NODE
-	{
-		name = SideNode8
-		transform = TrussSideNode4-001-002
-		size = 1
-	}
-	
-// rail nodes
-
-	NODE
-	{
-		name = RailNode1
-		transform = TrussRailNode1-001-001-002
-		size = 1
-	}
-	NODE
-	{
-		name = RailNode2
-		transform = TrussRailNode1-001-002
-		size = 1
-	}
-	NODE
-	{
-		name = RailNode3
-		transform = TrussRailNode2-001-001-002
-		size = 1
-	}
-	NODE
-	{
-		name = RailNode4
-		transform = TrussRailNode2-001-002
-		size = 1
-	}
-	NODE
-	{
-		name = RailNode5
-		transform = TrussRailNode3-001-001-002
-		size = 1
-	}
-	NODE
-	{
-		name = RailNode6
-		transform = TrussRailNode3-001-002
+		transform = BottomNodeStacked
 		size = 1
 	}
 
-	
+	node_stack_top = 0.0, 3.6, 0.0, 0.0, 1.0, 0.0, 1
+// SideNodes
+
+	NODE
+	{
+		name = RightNode
+		transform = RightNodeStacked
+		size = 1
+	}
+	NODE
+	{
+		name = LeftNode
+		transform = LeftNodeStacked
+		size = 1
+	}
+	NODE
+	{
+		name = FrontNode
+		transform = FrontNodeStacked
+		size = 1
+	}
+	NODE
+	{
+		name = BackNode
+		transform = BackNodeStacked
+		size = 1
+	}
+	NODE
+	{
+		name = RightNode1
+		transform = RightNodeStacked1
+		size = 1
+	}
+	NODE
+	{
+		name = LeftNode1
+		transform = LeftNodeStacked1
+		size = 1
+	}
+	NODE
+	{
+		name = FrontNode1
+		transform = FrontNodeStacked1
+		size = 1
+	}
+	NODE
+	{
+		name = BackNode1
+		transform = BackNodeStacked1
+		size = 1
+	}
+
+// Rail nodes
+
+	NODE
+	{
+		name = RailRight
+		transform = TrussRailNodeRightStacked
+		size = 1
+	}
+	NODE
+	{
+		name = RailLeft
+		transform = TrussRailNodeLeftStacked
+		size = 1
+	}
+	NODE
+	{
+		name = RailFront
+		transform = TrussRailNodeFrontStacked
+		size = 1
+	}
+	NODE
+	{
+		name = RailRight1
+		transform = TrussRailNodeRightStacked1
+		size = 1
+	}
+	NODE
+	{
+		name = RailLeft1
+		transform = TrussRailNodeLeftStacked1
+		size = 1
+	}
+	NODE
+	{
+		name = RailFront1
+		transform = TrussRailNodeFrontStacked1
+		size = 1
+	}
+
+// internal nodes
+
+	NODE
+	{
+		name = BottomInnerNode
+		transform = TrussBottomInternalStacked
+		size = 1
+	}
+	NODE
+	{
+		name = LeftInnerNode
+		transform = TrussLeftInternalStacked
+		size = 1
+	}
+	NODE
+	{
+		name = RightInnerNode
+		transform = TrussRightInternalStacked
+		size = 1
+	}
+	NODE
+	{
+		name = ForwardInnerNode
+		transform = TrussForwardInternalStacked
+		size = 1
+	}
+	NODE
+	{
+		name = BackInnerNode
+		transform = TrussBackInternalStacked
+		size = 1
+	}
+	NODE
+	{
+		name = TopInnerNode
+		transform = TrussTopInternalStacked
+		size = 1
+	}
+	NODE
+	{
+		name = BottomInnerNode1
+		transform = TrussBottomInternalStacked1
+		size = 1
+	}
+	NODE
+	{
+		name = LeftInnerNode1
+		transform = TrussLeftInternalStacked1
+		size = 1
+	}
+	NODE
+	{
+		name = RightInnerNode1
+		transform = TrussRightInternalStacked1
+		size = 1
+	}
+	NODE
+	{
+		name = ForwardInnerNode1
+		transform = TrussForwardInternalStacked1
+		size = 1
+	}
+	NODE
+	{
+		name = BackInnerNode1
+		transform = TrussBackInternalStacked1
+		size = 1
+	}
+	NODE
+	{
+		name = TopInnerNode1
+		transform = TrussTopInternalStacked1
+		size = 1
+	}
+
 // config
 
 	MODULE:NEEDS[Squad/Parts/Cargo/ScienceKit]
@@ -150,8 +217,191 @@ PART
 		packedVolume = 100
 	}
 
-// partswitch
+    MODULE
+    {
+        name = ModuleB9PartSwitch
+        moduleID = RaceWayAttached
+        switcherDescription = RaceWay 1
+        switcherDescriptionPlural = RaceWays
+		switchInFlight = true
+        SUBTYPE
+        {
+            name = Full Raceway
+            title = Full
+			transform = ExtendedBaseMainRaceWayTop
+			transform = ExtendedBaseMainRaceWay
+			transform = ExtendedBaseMainRaceWayBottom
+			addedMass = .007
+			addedCost = 100
+        }
 
+        SUBTYPE
+        {
+            name = No
+            title = No
+        }
+		
+        SUBTYPE
+        {
+            name = No Ends
+            title = Main
+			transform = ExtendedBaseMainRaceWay
+			addedMass = .007
+			addedCost = 100
+        }
+
+        SUBTYPE
+        {
+            name = Only Top
+            title = Top
+			transform = ExtendedBaseMainRaceWayTop
+			addedMass = .007
+			addedCost = 100
+        }
+
+        SUBTYPE
+        {
+            name = Only Bottom
+            title = Bottom
+			transform = ExtendedBaseMainRaceWayBottom
+			addedMass = .007
+			addedCost = 100
+        }
+
+        SUBTYPE
+        {
+            name = Only Ends
+            title = Ends
+			transform = ExtendedBaseMainRaceWayTop
+			transform = ExtendedBaseMainRaceWayBottom
+			addedMass = .007
+			addedCost = 100
+        }		
+	}
+	
+    MODULE
+    {
+        name = ModuleB9PartSwitch
+        moduleID = SideRails
+        switcherDescription = Dual Side Rails
+        switcherDescriptionPlural = Side Rails
+		switchInFlight = true
+        SUBTYPE
+        {
+            name = Full Side Rails
+            title = Side Full
+			transform = ExtendedBaseMainRailBottomClips
+			transform = ExtendedBaseMainRail
+			transform = ExtendedBaseMainRailTopClips
+			addedMass = .007
+			addedCost = 100
+        }
+
+        SUBTYPE
+        {
+            name = No Side Rails
+            title = Side No
+        }
+		
+        SUBTYPE
+        {
+            name = No End Clips
+            title = Side Main
+			transform = ExtendedBaseMainRail
+			addedMass = .007
+			addedCost = 100
+        }
+
+        SUBTYPE
+        {
+            name = Only Top Side Clips
+            title = Side Top
+			transform = ExtendedBaseMainRailTopClips
+			addedMass = .007
+			addedCost = 100
+        }
+
+        SUBTYPE
+        {
+            name = Only Bottom Side Clips
+            title = Side Bottom
+			transform = ExtendedBaseMainRailBottomClips
+			addedMass = .007
+			addedCost = 100
+        }
+
+        SUBTYPE
+        {
+            name = Only Side Clip Ends
+            title = Side Ends
+			transform = ExtendedBaseMainRailTopClips
+			transform = ExtendedBaseMainRailBottomClips
+			addedMass = .007
+			addedCost = 100
+        }		
+	}
+
+    MODULE
+    {
+        name = ModuleB9PartSwitch
+        moduleID = MainRails
+        switcherDescription = Front Rails
+        switcherDescriptionPlural = Main Rails
+		switchInFlight = true
+        SUBTYPE
+        {
+            name = Full Side Rails
+            title = Side Full
+			transform = ExtendedBaseThirdRailTopClips
+			transform = ExtendedBaseThirdRail-01
+			transform = ExtendedBaseThirdRailBottomClips
+			addedMass = .007
+			addedCost = 100
+        }
+
+        SUBTYPE
+        {
+            name = No Side Rails
+            title = Side No
+        }
+		
+        SUBTYPE
+        {
+            name = No Ends
+            title = Only Main Rail
+			transform = ExtendedBaseThirdRail-01
+			addedMass = .007
+			addedCost = 100
+        }
+
+        SUBTYPE
+        {
+            name = Only Top Side Clips
+            title = Side Top
+			transform = ExtendedBaseThirdRailTopClips
+			addedMass = .007
+			addedCost = 100
+        }
+
+        SUBTYPE
+        {
+            name = Only Bottom Side Clips
+            title = Side Bottom
+			transform = ExtendedBaseThirdRailBottomClips
+			addedMass = .007
+			addedCost = 100
+        }
+
+        SUBTYPE
+        {
+            name = Only Side Clip Ends
+            title = Side Ends
+			transform = ExtendedBaseThirdRailTopClips
+			transform = ExtendedBaseThirdRailBottomClips
+			addedMass = .007
+			addedCost = 100
+        }		
+	}
     MODULE
     {
         name = ModuleB9PartSwitch
@@ -163,7 +413,7 @@ PART
         {
             name = Top
             title = Top
-			transform = TrussTop-002-002
+			transform = ExtendedBaseTopBars
 			addedMass = .045
 			addedCost = 200
         }
@@ -176,8 +426,8 @@ PART
         {
             name = EndCap
             title = EndCap
-			transform = TrussTop-002-002
-			transform = BarEndCapTop-001-002
+			transform = ExtendedBaseTopBars
+			transform = Cylinder-09-01-02-02
         }		
 	}
     MODULE
@@ -191,7 +441,7 @@ PART
         {
             name = Bottom
             title = bottom
-			transform = TrussBottom-001-002
+			transform = ExtendedBaseBottomBars
 			addedMass = .045
 			addedCost = 200
         }
@@ -204,92 +454,9 @@ PART
         {
             name = EndCap
             title = EndCap
-			transform = TrussBottom-001-002
-			transform = BarEndCapBottom-001-002
+			transform = ExtendedBaseBottomBars
+			transform = Cylinder-09-01-02-01
         }		
 	}
-    MODULE
-    {
-        name = ModuleB9PartSwitch
-        moduleID = Rail Positioning
-        switcherDescription = Rail numbers
-        switcherDescriptionPlural = Rail
-		switchInFlight = true
-        SUBTYPE
-        {
-            name = 3 Rails
-            title = 3 Rails
-			transform = TrussRails-001-002
-			transform = TrussRails-002-002
-			transform = ThirdRail-001-002
-			transform = ThirdRail-002-002
-			transform = TopRailClips-001-002
-			transform = TopRailClips-002-002
-			transform = BottomRailClips-001-002
-			addedMass = .045
-			addedCost = 200
-			node = RailNode1
-			node = RailNode2
-			node = RailNode3
-			node = RailNode4
-			node = RailNode5
-			node = RailNode6
-        }
-        SUBTYPE
-        {
-            name = No Rail
-            title = No Rail1
-			node = SideNode1
-			node = SideNode2
-			node = SideNode5
-			node = SideNode6
-			node = SideNode7
-			node = SideNode8
-        }		
-	}
-    MODULE
-    {
-        name = ModuleB9PartSwitch
-        moduleID = RaceWay One
-        switcherDescription = RaceWay 1
-        switcherDescriptionPlural = RaceWays
-		switchInFlight = true
-        SUBTYPE
-        {
-            name = Yes
-            title = Yes
-			transform = MainRaceWay-001-002
-			transform = MainRaceWay-002-002
-			transform = ElectricalConnectorTop-001-002
-			addedMass = .007
-			addedCost = 100
-        }
-        SUBTYPE
-        {
-            name = No
-            title = No
-        }		
-	}
-    MODULE
-    {
-        name = ModuleB9PartSwitch
-        moduleID = RaceWay One
-        switcherDescription = RaceWay Connector
-        switcherDescriptionPlural = RaceWays
-		switchInFlight = true
-        SUBTYPE
-        {
-            name = Yes
-            title = Yes
-			transform = ElectricalConnectorTop-002-002
-			transform = ElectricalConnectorBottom-001-002
-			addedMass = .007
-			addedCost = 100
-        }
-        SUBTYPE
-        {
-            name = No
-            title = No
-        }		
-	}
+
 }
