Alpha Adapter Joint and TMMS Fix

--- a/GameData/HabTech2/Parts/Freedom/ht2_NITS_TMMS.cfg
+++ b/GameData/HabTech2/Parts/Freedom/ht2_NITS_TMMS.cfg
@@ -7,14 +7,14 @@ PART
 	CrewCapacity = 0
 	TechRequired = spaceExploration
 	entryCost = 12000
-	cost = 4500
+	cost = 4600
 	category = Control
 	subcategory = 0
-	title = ST-F Control Block
+	title = ST-F Truss Control Block
 	manufacturer = HabTech Consortium
-	description = This large structural truss unit contains a built-in probe core along with four huge Control Moment Gyroscopes, allowing it to control and re-orient even the largest of structures in space. Makes an ideal space station control core, featuring numerous attachment points for permanent and temporary stowage. Also contains a modest inventory capacity. 
+	description = This Control block provides command and control to the Non Integrated Truss System (NITS) for space station control. Can also load up a few games for freetime.
 	attachRules = 1,0,1,1,0
-	mass = 1.6
+	mass = 1.8
 	dragModelType = default
 	maximum_drag = 0.2
 	minimum_drag = 0.3
@@ -25,7 +25,7 @@ PART
 	maxTemp = 1000
 	skinMaxTemp = 1200
 	bulkheadProfiles = size2
-	tags = ISS habtech truss Z1 center centre half structural girder control reaction turn wheel gyro
+	tags = Space Station Freedom Truss
 
 	MODEL
 	{
@@ -113,8 +113,8 @@ PART
 	RESOURCE
 	{
 		name = ElectricCharge
-		amount = 250
-		maxAmount = 250
+		amount = 300
+		maxAmount = 300
 	}
 
 	MODULE
