--- a/GameData/HabTech2/Parts/Freedom/ht2_NITS_Truss2.cfg
+++ b/GameData/HabTech2/Parts/Freedom/ht2_NITS_Truss2.cfg
@@ -6,13 +6,13 @@ PART
 	rescaleFactor = 1
 
 	TechRequired = generalConstruction
-	entryCost = 2000
-	cost = 1500
+	entryCost = 1400
+	cost = 1200
 	category = Structural
 	subcategory = 0
-	title = ST-ITS-1986 "Freedom" External Truss System Upgraded 2
+	title = ST-ITS-1986 "Freedom" External Truss System Extension
 	manufacturer = HabTech Consortium
-	description = External Truss designed for orbital assembly for space station purposes
+	description = External Non Integrated Truss System (NITS) utilizing the new QuickTatch mounting system, and now extended for any extended truss needs.
 	attachRules = 1,1,1,1,1
 	mass = .6
 	dragModelType = default
@@ -214,7 +214,7 @@ PART
 	MODULE:NEEDS[Squad/Parts/Cargo/ScienceKit]
 	{
 		name = ModuleCargoPart
-		packedVolume = 100
+		packedVolume = 200
 	}
 
     MODULE
