--- a/GameData/HabTech2/Parts/Freedom/ht2_NITS_Truss6.cfg
+++ b/GameData/HabTech2/Parts/Freedom/ht2_NITS_Truss6.cfg
@@ -6,13 +6,13 @@ PART
 	rescaleFactor = 1
 
 	TechRequired = generalConstruction
-	entryCost = 2000
-	cost = 1500
+	entryCost = 1800
+	cost = 3400
 	category = Structural
 	subcategory = 0
-	title = ST-ITS-1988 "Tower" External Truss System Upgraded 6
+	title = ST-ITS-1988 "Tower" External Truss System Ultra Extension
 	manufacturer = HabTech Consortium
-	description = External Truss designed for orbital assembly for space station purposes
+	description = External Non Integrated Truss System (NITS) utilizing the new QuickTatch mounting system, and now at its maximum for even the largest trusses.
 	attachRules = 1,1,1,1,1
 	mass = 1.5
 	dragModelType = default
@@ -44,9 +44,10 @@ PART
 		size = 1
 	}
 
-	node_stack_top = 0.0, 10.8, 0.0, 0.0, 1.0, 0.0, 1
+
 // SideNodes
 
+node_stack_top = 0.0, 13.2, 0.0, 0.0, 1.0, 0.0, 1
 	NODE
 	{
 		name = RightNode
@@ -532,7 +533,7 @@ PART
 	MODULE:NEEDS[Squad/Parts/Cargo/ScienceKit]
 	{
 		name = ModuleCargoPart
-		packedVolume = 100
+		packedVolume = 600
 	}
 
     MODULE
