--- a/GameData/HabTech2/Parts/Freedom/ht2_NITS_Truss4.cfg
+++ b/GameData/HabTech2/Parts/Freedom/ht2_NITS_Truss4.cfg
@@ -6,13 +6,13 @@ PART
 	rescaleFactor = 1
 
 	TechRequired = generalConstruction
-	entryCost = 2000
-	cost = 1500
+	entryCost = 1600
+	cost = 2400
 	category = Structural
 	subcategory = 0
-	title = ST-ITS-1987 "Keel" External Truss System Upgraded 4
+	title = ST-ITS-1987 "Keel" External Truss System Mega Extension
 	manufacturer = HabTech Consortium
-	description = External Truss designed for orbital assembly for space station purposes
+	description = External Non Integrated Truss System (NITS) utilizing the new QuickTatch mounting system, and now even longer for even the longest truss needs
 	attachRules = 1,1,1,1,1
 	mass = 1.2
 	dragModelType = default
@@ -36,7 +36,7 @@ PART
 	}
 
 // Top Node
-
+	node_stack_top = 0.0, 8.4, 0.0, 0.0, 1.0, 0.0, 1
 	NODE
 	{
 		name = RightNode
@@ -364,7 +364,7 @@ PART
 	MODULE:NEEDS[Squad/Parts/Cargo/ScienceKit]
 	{
 		name = ModuleCargoPart
-		packedVolume = 100
+		packedVolume = 400
 	}
 
     MODULE
