--- a/GameData/HabTech2/Parts/Freedom/ht2_NITS_MountingPlate.cfg
+++ b/GameData/HabTech2/Parts/Freedom/ht2_NITS_MountingPlate.cfg
@@ -6,15 +6,15 @@ PART
 	rescaleFactor = 1
 
 	TechRequired = generalConstruction
-	entryCost = 2000
-	cost = 1500
+	entryCost = 250
+	cost = 200
 	category = Structural
 	subcategory = 0
 	title = ST-ITS-1990 "Plate" Truss Mounted Platform
 	manufacturer = HabTech Consortium
-	description = External Truss designed for orbital assembly for space station purposes
+	description = Mounting Plate for the Non Integrated Truss System (NITS). Includes the QuickTatch mounting system for any payloads.
 	attachRules = 1,1,1,1,1
-	mass = .5
+	mass = .2
 	dragModelType = default
 	maximum_drag = 0.2
 	minimum_drag = 0.3
