--- a/GameData/HabTech2/Parts/Freedom/ht2_NITS_Truss.cfg
+++ b/GameData/HabTech2/Parts/Freedom/ht2_NITS_Truss.cfg
@@ -6,13 +6,13 @@ PART
 	rescaleFactor = 1
 
 	TechRequired = generalConstruction
-	entryCost = 2000
-	cost = 1500
+	entryCost = 1200
+	cost = 650
 	category = Structural
 	subcategory = 0
 	title = ST-ITS-1985 "Baseline" External Truss System
 	manufacturer = HabTech Consortium
-	description = External Truss designed for orbital assembly for space station purposes
+	description = External Non Integrated Truss System (NITS) utilizing the new QuickTatch mounting system.
 	attachRules = 1,1,1,1,1
 	mass = .3
 	dragModelType = default
